--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -16,9 +16,10 @@
     <div class="container">
         <h2>Fusionner des fichiers Excel</h2>
 
+        <!-- Section de téléchargement des fichiers avec un seul champ de mots-clés -->
         <div class="upload-section">
-            <label>Insérez vos mots-clés :</label>
-            <input type="text" id="mots-cles" placeholder="Entrez vos mots-clés, un par ligne. Laissez une ligne vide entre chaque mot-clé.">
+            <label>Insérez vos mots-clés (séparés par des virgules) :</label>
+            <input type="text" id="mots-cles" placeholder="mot1, mot2, mot3...">
         </div>
 
         <div class="file-section">
